--- a/zajecia2/build.gradle
+++ b/zajecia2/build.gradle
@@ -18,11 +18,19 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.h2database:h2'
+
+	implementation 'com.itextpdf:itext7-core:7.2.5'
+	implementation 'org.apache.pdfbox:pdfbox:2.0.29'
+	implementation 'org.xhtmlrenderer:flying-saucer-pdf:9.1.22'
+
+
+
 
 }
 
